A slight update to egg sauce recipe page

--- a/recipes/egg-sauce.html
+++ b/recipes/egg-sauce.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Egg Sauce</h1>
 
-    <img src="./images/Broccoli.jpg" alt="broccoli">
+    <img src="./images/Egg-Sauce.jpeg" alt="Egg Sauce">
     
     <h3>Description:</h3>
         <p>
